--- a/assets/css/style1.css
+++ b/assets/css/style1.css
@@ -1,15 +1,32 @@
 .style1 {
-    background-color: green;
+  background-color: green;
+}
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background-color: black;
+  color: white;
 }
 
 .dev_container {
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 3rem;
+}
+
+.u-vflex-center-center {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .countdown {
-    font-size: 3rem;
+  font-size: 1.5rem;
 }
